WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27285
[Qt] New window created by clicking a link is not visible
https://bugs.webkit.org/show_bug.cgi?id=27285
Summary
[Qt] New window created by clicking a link is not visible
Yael
Reported
2009-07-14 18:24:05 PDT
When clicking a link with a specified target attribute, a new window is created. That new window is not visible though. This is not a problem when opening a new window from JavaScript. Loading the following content in QtLauncher can show the problem: <html> <body> <a target="_blank" href="#">click me</a><br> </body></html>
Attachments
Force the new window to be visible
(1.22 KB, patch)
2009-07-14 18:32 PDT
,
Yael
manyoso
: review-
Details
Formatted Diff
Diff
Make the change only for QtLauncher
(1.01 KB, patch)
2009-07-15 08:22 PDT
,
Yael
hausmann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2009-07-14 18:32:43 PDT
Created
attachment 32757
[details]
Force the new window to be visible This is similar to calling ChromeClientQt::show(), when opening a new window from JavaScript.
Adam Treat
Comment 2
2009-07-15 04:30:19 PDT
Comment on
attachment 32757
[details]
Force the new window to be visible I believe this is incorrect. Arora, which is based on QtWebKit has no problem showing windows when a link is clicked. In fact, there is a setting in Arora to control the behavior so that opening the "new window" is done in a tab instead. The QWebPage|QWebFrame::createWindow(...) function is virtual and allows the client application to create the "new window" in the manner that it prefers. The default implementation does nothing, thus this will have no effect on the default implementation. It seems that if the client is responsible for constructing the "new window" in the manner that it deems fit, then it can be responsible for showing it too.
Yael
Comment 3
2009-07-15 08:22:13 PDT
Created
attachment 32786
[details]
Make the change only for QtLauncher As suggested in
comment #2
, each client is responsible for showing its own window. Thus moving the change to QtLauncher.
Simon Hausmann
Comment 4
2009-07-15 08:41:22 PDT
Comment on
attachment 32786
[details]
Make the change only for QtLauncher r=me, thanks :)
Simon Hausmann
Comment 5
2009-07-15 08:42:09 PDT
Landed in
r45913
Yael
Comment 6
2009-11-16 09:52:25 PST
***
Bug 29598
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug