2009-07-15  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=27285

        When the user clicks a link with a target attribute, the newly created window should be visible.
        Make new windows created in Qtlauncher visible.

        * QtLauncher/main.cpp:
        (WebPage::createWindow):

Canonical link: https://commits.webkit.org/37543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45913 268f45cc-cd09-0410-ab3c-d52691b4dbfc